# stagesync

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  codecov.yml  compose.prod.yml  compose.yml  package.json  pnpm-lock.yaml  turbo.json
.cursor/rules/: changelog.mdc  constitution.mdc  docs-analysis-naming.mdc  root-layout.mdc  todo-hygiene.mdc  todo.mdc  ui-density.mdc  ui-parity.mdc  versioning.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  config.yml  enhancement.yml  feature_request.yml
.github/workflows/: ci.yml  continuous-integration.yml  release.yml
.husky/: pre-commit
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: desktop-bridge.toml
apps/desktop/src-tauri/src/: launcher.rs  lib.rs  main.rs
apps/server/: eslint.config.js  package.json  tsconfig.json  vitest.config.ts
apps/web/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  DESKTOP.md  INSTALL.md  MIGRATION.md  ROADMAP.md  STANDARDS.md  TODO.md  github-labels.md  rfc-v5.1-proposals.md  ui-shell-inventory.md
docs/adr/: 0001-storage-layout.md  0002-timebase-ssot.md  0003-ui-direction-booth.md  0004-updates-docker.md  0005-domain-axioms.md  0006-no-json-api.md  README.md  (+8 more)
(+378 files in other folders)
