[package]
name = "stagesync-desktop"
version = "5.0.0-beta.1"
description = "StageSync thin desktop shell (ADR 0010)"
authors = ["StageSync"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "stagesync_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "time", "io-util"] }
open = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
